clean up of trashed files and reordering of chapters

--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -35,147 +35,11 @@
 		Inventory control is a core aspect of supply chain management, balancing customer demand fulfillment against the costs of holding and ordering inventory. This paper addresses inventory management through the lens of Bayesian decision theory, enabling probabilistic decision-making under uncertainty. By establishing a framework for sequential decision-making over an infinite time horizon, an optimal solution tailored to a specific asymmetric cost function is derived, offering insights for practical implementations in inventory management.
 	\end{abstract}
 	
-	\section{Introduction}
-	Inventory management is a critical component of supply chain management that involves overseeing the ordering, storage, and use of a company's inventory, including raw materials, components, and finished goods. Effective inventory control ensures that a company has adequate stock to meet demand while minimizing costs associated with holding inventory. In practice, this often requires a balance between minimizing stockouts, which disrupt service levels, and limiting overstocking, which incurs unnecessary holding costs.
+	\input{chapters/introduction.tex}
+	\input{chapters/framework.tex}
+	\input{chapters/optimal_policy.tex}
+	\input{chapters/conclusion.tex}
 	
-	The coordination of inventory and transportation decisions has gained significant attention over recent decades, driven by the need for specific practices like vendor-managed inventory (VMI), third-party logistics (3PL), and time-definite delivery (TDD) (see, e.g., \citep{CetinkayaLee2000, Alumur2012, Gurler2014}). These programs aim to optimize the balance between inventory holding costs and transportation costs. Traditional inventory models often assume immediate delivery to meet demand, yet this can be inefficient due to the fixed costs of transportation, prompting companies to adopt shipment consolidation policies that merge smaller demands into larger, less frequent shipments \citep{CetinkayaBookbinder2003, HigginsonBookbinder1994}.
-	
-	Three commonly implemented shipment consolidation policies—quantity-based, time-based, and hybrid—are particularly useful in improving cost efficiency by regulating shipment size or timing. Each policy type has distinct impacts on performance metrics, such as delay penalties, average inventory, and annual costs, guiding companies toward designing more efficient inventory-transportation systems \citep{Cetinkaya2005, Wei2020, Cetinkaya2006}.
-	
-	While these approaches provide valuable frameworks, they do not explicitly account for the uncertainties inherent in demand fluctuations or the associated asymmetric costs of overstocking and understocking. In settings where inventory decisions must be made sequentially, uncertainty can be more effectively managed through Bayesian decision theory, which offers a probabilistic approach to decision-making under uncertainty. This framework allows for more refined, sequential adjustments to inventory based on demand forecasting, which dynamically incorporates new data over time.
-	
-	In this study, Bayesian decision theory is utilized to address a sequential inventory control problem. Specifically, an optimal decision-making framework is derived based on a discounted asymmetric cost function, considering the impact of decisions made infinitely far into the future. Our model involves a decision-maker (henceforth referred to as the Robot) who manages stock levels over time in an interactive environment shaped by a random demand process. Through this setup, a mathematically rigorous and computationally feasible solution for optimal inventory decisions that account for uncertainty and asymmetric costs is derived.
-	
-	\section{Sequential Decision-Making Framework}
-	To formalize the sequential decision-making problem, consider a stock management scenario in which the Robot is set in a game against an entity termed Nature, which represents environmental randomness~\citep{lavalle2006}. In this game the Robot and Nature each have to make a decision, $u\in \Omega_U\subset \mathbb{Z}_{\geq 0}$ and $s\in \Omega_S\subset \mathbb{Z}_{\geq 0}$ respectively, for each time step $t\in [1,T]$ ($T\geq L$) into the future. 
-	\begin{definition}[Stock level]
-		\label{def:stock}
-		Given an initial stock $N_0$, the stock level at time $t$ evolves according to
-		\begin{equation}
-			\begin{split}
-				N_t &\equiv N_0 + \sum_{t'=1}^{t} (u_{t'-L} - s_{t'})\\
-				& = N_0+\upsilon_t-\zeta_t
-			\end{split},
-		\end{equation}
-		where $u_{t'-L}$ represents the decision made at an earlier time due to a potential lag $L$ and $\zeta_t\equiv \sum_{t'=1}^ts_{t'}$ and $\upsilon_t\equiv \sum_{t'=1}^tu_{t'-L}$. To support probabilistic decision-making, the Robot uses a probabilistic forecast based on data $D$
-		\begin{equation}
-			p(s_1, s_2, \dots s_T| D, I),
-		\end{equation}
-		where $I$ denotes any additional background information~\citep{Sivia2006}.
-	\end{definition}
-
-	\begin{definition}[Discounted Cost]
-		\label{def:cost}
-		The Robot receives a numerical penalty, assigned by a cost function, depending on the decisions $\{u\}, \{s\}$ made over the forecast horizon. The cost $C$ is assumed to be discounted and is defined as
-		\begin{equation}
-			C = \sum_{t=1}^{T} \gamma_{\text{disc}}^{t-1} 
-			\left( h_t 1_{N_t > 0} + c_t (1_{N_t > 0} - 1) \right) N_t,
-			\label{eq:cost}
-		\end{equation}
-		where $\gamma_{\text{disc}} \in [0,1]$ is the discount factor, $h_t$ and $c_t$ represent 
-		storage (holding) and understocking costs at time $t$, respectively, and 
-		$1_{N_t > 0}$ is the indicator function that equals 1 when $N_t > 0$ (see definition \ref{def:stock}) and $0$ otherwise.
-	\end{definition}
-	
-	\begin{definition}[Optimal Policy]
-		\label{def:policy}
-		Given the data $D$, the Robot’s objective is to formulate a sequence of decision rules, called a policy, $\pi = \{U_0(D)=u_0, U_1(D)=u_1, \dots\}$, where each $U_j(D) = u_j$ minimizes the expected cost (definition \ref{def:cost})
-		\begin{equation}
-			\pi^* = \arg \min_{\pi} \mathbb{E}[C| D, I]
-		\end{equation}
-		over the probability distribution of definition \ref{def:stock}. The optimal decisions rules satisfy the first- and second-order conditions
-		\begin{equation}
-			\begin{split}
-				\frac{d}{dU_m} \mathbb{E}[C | D, I] \Big|_{U_m = U_m^*} &= 0 \quad \forall m,\\
-				\frac{d^2}{dU_m^2} \mathbb{E}[C | D, I] \Big|_{U_m = U_m^*} & > 0 \quad \forall m.
-			\end{split}
-			\label{eq:conditions}
-		\end{equation}
-	\end{definition}
-
-	\begin{theorem}[Optimal Policy Rule for Inventory Control]
-		\label{theorem:opt_policy}
-		Given the asymmetric cost function of definition \ref{def:cost} the optimal policy (definition \ref{def:policy}) for the Robot at each time step $t$ is defined by (see appendix \ref{app:deriva} for derivation)
-		\begin{equation}
-			p(N_t^* > 0 | D, I) = \frac{c_t}{c_t + h_t},
-			\label{eq:t1}
-		\end{equation}
-		where
-		\begin{equation}
-			N_t^* = N_0 +\upsilon_t^*-\zeta_t,
-		\end{equation}
-		$\zeta_t-\zeta_{t-1}\geq 0$ and $\upsilon_t-\upsilon_{t-1}\geq 0$ by definition. Since negative decisions are not allowed, $\upsilon_t^* = 0$ is the optimal decision in case of $N_t\leq 0$. In this case, the condition in equation \eqref{eq:t1} is not strictly satisfied, as $p(N_t^* > 0 | D, I)$ becomes irrelevant due to the sufficient inventory at time $t$.
-	\end{theorem}
-	
-	
-	\section{Optimal Policy under Conditional Independence}
-	Equation \eqref{eq:t1} can be written
-	\begin{equation}
-		\begin{split}
-			p(N_t^* > 0 | D, I) &= \sum_{s_1,\dots s_t}1_{N_{t}> 0}p(s_1,\dots s_t|D,I)\sum_{s_{t+1},\dots s_T}p(s_{t+1},\dots s_T|s_1,\dots s_t,D,I)\\
-			& = \sum_{\zeta_t=0}^{N_0+\upsilon_t}p(\zeta_t|D,I)\sum_{s_{t+1},\dots s_T}p(s_{t+1},\dots s_T|\zeta_t,D,I)\\
-		\end{split}
-	\end{equation}
-	Assuming conditional independence $p(s_{t+1},\dots s_T|\zeta_t,D,I)=p(s_{t+1},\dots s_T|D,I)$
-	\begin{equation}
-			p(N_t^* > 0 | D, I)  = \sum_{\zeta_t=0}^{N_0+\upsilon_t}p(\zeta_t|D,I).
-			\label{eq:indep}
-	\end{equation}
-	Combining eqation \eqref{eq:indep} with theorem \ref{theorem:opt_policy} implies that the optimal policy is related to quantiles of $\zeta_t$ viz
-	\begin{equation}
-		\upsilon_t^* = \max(\text{round}(\mathcal{Q}_{\frac{c_t}{c_t+h_t}}\zeta_t-N_0),0),
-		\label{eq:opt}
-	\end{equation}
-	where $\mathcal{Q}_q(X)$ denotes the $q$-quantile of the random variable $X$ and the rounding ensures the decisions belong to $\Omega_U\subset \mathbb{Z}_{\geq 0}$. 
-	
-	\subsection{Policy Efficiency Ratio}
-	In order to gauge the effect of using the optimal policy (equation \eqref{eq:opt}), the associated expected cost can be compared to the expected cost associated to a baseline policy via the policy efficiency ratio (PER)
-	\begin{equation}
-		\text{PER}\equiv \frac{\mathbb{E}[C|D,I]|_{\pi=\pi^*}}{\mathbb{E}[C|D,I]|_{\pi=\pi'}},
-		\label{eq:per_def}
-	\end{equation}
-	where $\pi^*$ is the optimal policy (theorem \ref{theorem:opt_policy}) and $\pi'$ is the baseline policy. Note that PER$\in [0,1]$ by definition since the optimal policy by definition yield the lowest possible expected cost. Assuming i) $p(\zeta_t|D,I)$ follows a Poisson distribution (with time varying rate parameter) and ii) conditional independence, the expected cost can be written (see appendix \ref{app:expected_cost})
-	\begin{equation}
-		\begin{split}
-			\mathbb{E}[C|D,I] = \sum_{t=1}^{T} \gamma_{\text{disc}}^{t-1} \bigg(& 
-			(h_t+c_t)(N_0 + \upsilon_t)\frac{\Gamma(N_0+\upsilon_t+1,\lambda_t)}{\Gamma(N_0+\upsilon_t+1)}\\&- (h_h+c_t)\lambda_t \frac{\Gamma(N_0+\upsilon_t,\lambda_t)}{\Gamma(N_0+\upsilon_t)}\\
-			&- c_t(N_0 + \upsilon_t-\lambda_t)\bigg).
-		\end{split}
-		\label{eq:expected_cost}
-	\end{equation}
-	Equation \eqref{eq:expected_cost} can be used to calculate the exact PER for any baseline policy.
-	
-	\subsubsection{Example: Numerical Policy Efficiency Ratio}
-	To provide an example of usage of both theorem \ref{theorem:opt_policy} and the PER, the PER is considered with $N_0=37$, $L=6$, constant unit value $c_t=c$, constant holding cost $h_t=h$, Natures decisions shown in figure \ref{fig:ts} and the baseline policy of definition \ref{def:baseline}.
-	
-	\begin{figure}[h!]
-		\centering
-		\includegraphics[width=1\textwidth]{figures/time_series.pdf}
-		\caption{Natures decisions as a function of time. Blue denotes the historical data available for the Robot, red denote the forecast made by the Robot (based on the historical data) and the black denotes the true future values for reference (not used).}
-		\label{fig:ts}
-	\end{figure}
-	\begin{definition}[Baseline Policy]  
-		\label{def:baseline}
-		The baseline policy is an $(R, Q)$ inventory policy~\citep{bartmann1992inventory,axsaeter2006inventory}, where the reorder point $R$ determines when to reorder, and the batch quantity, $Q$, is based on the expectation of Natures decisions
-		\begin{equation}  
-			\upsilon_t' = \max(\text{round}(\mathbb{E}[\zeta_t|D, I] + R - N_0), 0).  
-		\end{equation}  
-		The rounding ensures the order quantity is an integer, and the maximum function prevents negative orders.
-	\end{definition}
-		
-	Given the above setup, figure \ref{fig:per} presents a heatmap illustrating the Policy Efficiency Ratio (PER) as a function of the reorder point $R$ and the cost-to-holding ratio $\frac{c}{h}$. From the figure, several patterns emerge. In general there seem to be bands of approximately constant PER following $R\sim \ln\frac{c}{h}$ -lines. This band represent the optimal balancing point for $R$ for a given $\frac{c}{h}$. At $\frac{c}{h}=1, R=0$ the PER achieves its maximum at $\simeq 1$, which makes intuitive sense since if $h=c$, the cost function is balanced and the optimal balancing point would be at $R=0$. The maximum value of the band slightly decrease for increasing $\frac{c}{h}$, with PER$\sim 0.9$ as a mean value. Hence, even in case where the reorder point $R$ is optimized perfectly, there is a significantly higher expected cost (around $10\%$) for the baseline (R,Q) - policy relative to the optimal policy (theorem \ref{theorem:opt_policy}). 
-	\begin{figure}[h!]
-		\centering
-		\includegraphics[width=1\textwidth]{figures/per.pdf}
-		\caption{Heatmap of the policy efficiency ratio (PER) calculated using equations \eqref{eq:expected_cost}, \eqref{eq:per_def}, definition \ref{def:baseline} and theorem \ref{theorem:opt_policy} with $N_0=37$, $L=6$ and Natures decisions shown in figure \ref{fig:ts}.}
-		\label{fig:per}
-	\end{figure}
-
-	
-	\section{Conclusion}
-	Assuming a company has a cost function on the form of definition \ref{def:cost}, they can use the PER in comparison with their current decision policy to i) gauge the expected improvement by implementing the optimal policy or alternatively tune the value of $R$ for their values of $\frac{c}{h}$. The PER shown in figure \ref{fig:per} indicate that for $\frac{c}{h}\gg 1$ the optimal policy yields a reduction of $\sim 10\%$ in expected cost. In case a company is not using decision theory in a formal way, the expected cost reduction may be significantly higher. 
-	
-
 	\newpage
 	\begin{appendices}
 		\input{chapters/app_deriv.tex}
